--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,3 @@
-.container {
-  width: 70%;
-  margin: auto;
-  text-align: center;
-}
-
-.dice {
-  text-align: center;
-  display: inline-block;
-
-}
-
-.dice-body {
-  background-color: #393E46;
-}
-
-.dicee-title {
-  margin: 30px;
-  font-family: 'Montez', cursive;
-  text-shadow: 5px 0 #232931;
-  font-size: 8rem;
-  color: #f57665;
-}
-
-.dicee-winner {
-  font-family: 'Roboto', cursive;
-  font-size: 3rem;
-  color: #f57665;
-  margin: 30px;
-}
-
-
 p {
   font-size: 3rem;
   color: #f57665;
@@ -40,15 +8,52 @@ img {
   width: 80%;
 }
 
-footer {
-  margin-top: 5%;
-  color: #EEEEEE;
+.container {
+  width: 70%;
+  margin: auto;
   text-align: center;
-  font-family: 'Montez', cursive;
+}
 
+.dice {
+  text-align: center;
+  display: inline-block;
+}
+
+.dice-body {
+  background-color: #393E46;
+}
+
+.dicee-title {
+  color: #f57665;
+  font-family: 'Montez', cursive;
+  text-shadow: 5px 0 #232931;
+  font-size: 8rem;
+  margin: 30px;
+}
+
+.dicee-winner {
+  color: #f57665;
+  font-family: 'Roboto', cursive;
+  font-size: 3rem;
+  margin: 30px;
 }
 
 .roll-dice {
-  text-align: center;
   margin: 2% auto;
+  text-align: center;
+}
+
+/* Footer Section */
+footer {
+  color: #EEEEEE;
+  font-size: 1rem;
+  margin: 7% auto;
+  text-align: center;
+}
+
+@media (max-width: 767px) {
+  .btn {
+    display: block;
+    width: 100%;
+  }
 }
